Fix two issues found using metrics-test.
 - Make unit test locale-independent, similar to Onionoo's 860228c.

 - Replace deprecated method Class.newInstance().